--- a/payload/Makefile
+++ b/payload/Makefile
@@ -8,6 +8,6 @@ all:
 	$(CC) -g *.c -c -march=armv6z -O2 -ffast-math -std=c99 -Wall
 	$(CC) -g *.s -c -march=armv6z
 	$(CC) -T 3ds.ld *.o
-	mkdir -p ../romfs
-	$(OC) --set-section-flags .bss=alloc,load,contents -O binary a.out ../romfs/arm11.bin
+	mkdir -p ../data
+	$(OC) --set-section-flags .bss=alloc,load,contents -O binary a.out ../data/arm11.bin
 	rm *.out *.o
